--- a/src/main/webapp/css/Slides.css
+++ b/src/main/webapp/css/Slides.css
@@ -91,7 +91,7 @@ header {
 }
 
 .paralax3 {
-    background: url(https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/1280px-MySQL.svg.png) 50% 0 no-repeat fixed;
+    background: url(https://i.ytimg.com/vi/RoH3-sCLnas/maxresdefault.jpg) 50% 0 no-repeat fixed;
     margin: 0 auto;
     padding: 50px 0;
     background-position: center center;
@@ -103,7 +103,7 @@ header {
     color: #fff;
 }
 .paralax4 {
-    background: url(https://netbeans.org/images_www/wallpapers/contributed-wallpaper-1.jpg) 50% 0 no-repeat fixed;
+    background: url(https://netbeans.org/images_www/wallpapers/contributed-wallpaper-2.jpg) 50% 0 no-repeat fixed;
     margin: 0 auto;
     padding: 50px 0;
     background-position: bottom;
@@ -115,7 +115,7 @@ header {
     color: #fff;
 }
 .paralax5 {
-    background: url(https://crossbrowsertesting.com/design/images/github-logo.png) 50% 0 no-repeat fixed;
+    background: url(https://44w9r03pyzy8416ktt3d9tvq1c1m-wpengine.netdna-ssl.com/wp-content/uploads/2015/08/github-logo.png) 50% 0 no-repeat fixed;
     margin: 0 auto;
     padding: 50px 0;
     background-position: center center;
@@ -139,19 +139,7 @@ header {
     color: #fff;
 }
 .paralax7 {
-    background: url(http://www.blog.wlconsultoria.net/wp-content/uploads/2015/07/logo_bootstrap.jpg?x14548) 50% 0 no-repeat fixed;
-    margin: 0 auto;
-    padding: 50px 0;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    text-align: center;
-    color: #fff;
-}
-.paralax8 {
-    background: url(https://res.cloudinary.com/devpost/image/fetch/s--cC3yAO1K--/http://renanslopes8.com.br/projetosgit/readme-img/jquery_logo.png) 50% 0 no-repeat fixed;
+    background: url(http://blog.getbootstrap.com/img/bootstrap-social.png) 50% 0 no-repeat fixed;
     margin: 0 auto;
     padding: 50px 0;
     background-position: center center;
