--- a/src/main/webapp/css/Slides.css
+++ b/src/main/webapp/css/Slides.css
@@ -150,6 +150,18 @@ header {
     text-align: center;
     color: #fff;
 }
+.paralax8 {
+    background: url(http://wallpapersfr.com/wp-content/uploads/2015/04/Abstract-Glass-fish-in-water.jpg) 50% 0 no-repeat fixed;
+    margin: 0 auto;
+    padding: 50px 0;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
 
 /* mouse anaimtion */
 
